# hw3-henry-liev-forked

./: .gitignore  Makefile  README.md  ai_documentation.txt  environment.yml  myst.yml  pyproject.toml
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
